--- a/index.html
+++ b/index.html
@@ -2,14 +2,14 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Diatom Evolution & Adaptation Lab (DEAL)</title>
+  <title>Diatom Ecology & Adaptation & Evolution Lab</title>
   <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body class="index-page">
   <!-- ====== 导航栏 ====== -->
   <nav>
-    <div class="logo">Diatom Evolution & Adaptation Lab</div>
+    <div class="logo">Diatom Ecology & Adaptation & Evolution Lab</div>
     <ul class="nav-links">
       <li><a href="index.html"><span class="nav-zh">首页</span><br><span class="nav-en">Home</span></a></li>
       <li><a href="research.html"><span class="nav-zh">研究方向</span><br><span class="nav-en">Research</span></a></li>
@@ -39,63 +39,102 @@
 
 <!-- Header -->
   <main class="content">
-    <section class="page-header">
-      <h1 data-en="研究方向 (Research)" data-zh="研究方向">研究方向 (Research)</h1>
-      <p data-en="Research" data-zh="研究方向"></p>
-    </section>
-
-  <section class="research-section">
-
+<section class="lab-overview">
+  <!-- 左侧实验室简介 -->
+  <div class="lab-info">
+        <h2>实验室简介 | About the Lab</h2>
     <div class="research-card">
-    <h2>实验室简介 | About the Lab</h2>
-    <p>
-      硅藻进化与适应实验室（DEAL）主要关注硅藻在全球变化背景下的生态适应与进化机制研究。我们通过多代进化实验、转录组学、代谢组学及生态生理学方法，揭示硅藻在不同温度、光照和养分条件下的长期适应过程与分子调控机制。<br>
-      The Diatom Evolution & Adaptation Lab (DEAL) focuses on understanding the ecological adaptation and evolutionary mechanisms of diatoms under global environmental change. Using long-term evolution experiments, transcriptomics, metabolomics, and eco-physiological approaches, we investigate how diatoms adapt to variations in temperature, light, and nutrient availability across generations.
-    </p>
-    </div>
-	
-    <div class="research-card">
-     <h2>主要研究方向 | Research Focus</h2>
-    <p>
-      <li>硅藻对温度变化的长期适应与快速进化机制<br>Long-term and rapid adaptation of diatoms to temperature changes</li>
-      <li>环境胁迫（光照、营养盐、铁限制）下的分子响应网络<br>Molecular regulatory networks under environmental stresses (light, nutrients, iron)</li>
-      <li>高原及极端环境硅藻的生态适应与进化<br>Adaptation and evolution of diatoms from high-altitude and extreme environments</li>
-    </p>	
+
+      <p>硅藻生态、适应与进化实验室（DEAEL）于2021年4月在西安成立，主要致力于揭示硅藻在全球变化背景下的生态适应与进化机制。
+实验室综合运用实验进化、生理生化分析、多组学整合及生态学研究等多学科手段，系统探讨硅藻在温度、光照、营养等环境变化下的适应和进化规律与分子调控机制。我们的研究旨在连接外部环境变化与硅藻内部适应过程之间的联系，从微观分子机制到宏观生态响应，揭示其进化与适应的统一规律。<br>
+        The Diatom Ecology, Adaptation and Evolution Laboratory (DEAEL) was established in April 2021 in Xi’an, China.
+Our research aims to elucidate the ecological adaptation and evolutionary mechanisms of diatoms under the context of global environmental change.
+By integrating experimental evolution, physiological and biochemical analyses, multi-omics approaches, and ecological investigations, we explore how diatoms adapt and evolved to variations in temperature, light, and nutrient conditions. Our work seeks to bridge the gap between external environmental shifts and the intrinsic adaptive responses of diatoms, revealing the unified principles that link molecular regulation with ecological and evolutionary outcomes.
+      </p>
     </div>
 
-
-    <div class="research-card">
-     <h2>主要项目 | Ongoing Projects</h2>
-    <p>
-      <li>国家自然科学基金面上项目：硅藻温度适应的分子进化机制<br>NSFC Project: Molecular evolutionary mechanisms of diatom temperature adaptation</li>
-      <li>陕西省科技创新团队计划：微藻适应与演化生态学研究<br>Shaanxi Science & Technology Team Program: Algal adaptation and evolutionary ecology</li>
-    </p>	
+      <h2>实验室隶属与位置 | Affiliation & Location</h2>
+     <div class="research-card">
+      <p>陕西科技大学生物与医药学院<br> College of Life Sciences, Shannxi University of Science and Technology, Xi’an, China</p>
+	  <p>联系方式：zkli@sust.edu.cn</p>
     </div>
 
-
+      <h2>致谢 | Acknowledgements</h2>
     <div class="research-card">
-     <h2>实验室隶属与位置 | Affiliation & Location</h2>
-    <p>
-      陕西科技大学生物与医药学院<br>
-      College of Life Sciences, Northwest University, Xi’an, China
-    </p>	
+      <p>本实验室的研究工作受到以下机构的资助与支持：</p>
+      <ul>
+        <li><a href="https://www.nsfc.gov.cn" target="_blank">国家自然科学基金委员会 (NSFC)</a></li>
+        <li><a href="https://kjt.shaanxi.gov.cn" target="_blank">陕西省科学技术厅</a></li>
+        <li><a href="http://www.sust.edu.cn/" target="_blank">陕西科技大学</a></li>
+      </ul>
     </div>
+  </div>
+
+<!-- 右侧新闻区 -->
+<div class="lab-news">
+  <h2>实验室最近新闻 | Latest Lab News</h2>
+  <div class="news-list">
+    <!-- 新闻列表 -->
+    <div class="news-item">
+      <img src="images/2025ncc.png" alt="News 1">
+      <div class="news-text">
+        <h3>2025-10-23硅藻长期适应研究成果发表于 Nature Climate Change / Polyploidization in diatoms accelerates adaptation to warming</h3>
+        <p>我们揭示了海洋硅藻通过多倍化来快速适应暖化，为理解硅藻的暖化适应提供新视角。</p>
+        <p>The authors obtained large-volume individuals of diatom cultures under thermal stress. These polyploids (having more than two sets of chromosomes) are shown to rapidly adapt to high temperatures, highlighting polyploidization as a possible adaptive measure for diatoms under climate change.</p>
+      </div>
+    </div>
+    <div class="news-item">
+      <img src="images/2025ccoe.jpg" alt="News 2">
+      <div class="news-text">
+        <h3>2025-10-24-10-26团队成员在武汉参加2025年第二十二届中国生态学大会</h3>
+      </div>
+    </div>
+    <div class="news-item">
+      <img src="images/news3.jpg" alt="News 3">
+      <div class="news-text">
+        <h3>实验室新成员加入</h3>
+        <p>欢迎新同学加入 DEAL，共同探索微藻适应与进化的科学问题。</p>
+      </div>
+    </div>
+  </div>
+
+  <!-- 学术资源卡片区 -->
+  <div class="resources-card">
+    <h3>学术资源 | Academic Resources</h3>
+    <div class="resources-grid">
+
+ <a href="https://so.sciencesoft.cn/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">学术搜索</a>
+  <a href="https://chat.deepseek.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">DeepSeek</a>
 
 
-    <div class="research-card">
-     <h2>致谢 | Acknowledgements</h2>
-    <p>
-      本实验室的研究工作受到以下机构的资助与支持：<br>
-      Our research is supported by:
-    </p>
-    <ul>
-      <li><a href="https://www.nsfc.gov.cn" target="_blank">国家自然科学基金委员会 (NSFC)</a> / National Natural Science Foundation of China</li>
-      <li><a href="https://kjt.shaanxi.gov.cn" target="_blank">陕西省科学技术厅</a> / Shaanxi Provincial Department of Science and Technology</li>
-      <li><a href="https://www.nwu.edu.cn" target="_blank">陕西科技大学</a> / Northwest University</li>
-    </ul>
-	
+ <a href="https://www.nature.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">Nature</a>
+      <a href="https://www.cell.com/" target="_blank" class="resource-item" style="background-color:#FFD93D;">Cell</a>
+      <a href="https://www.sciencemag.org/" target="_blank" class="resource-item" style="background-color:#1A535C;">Science</a>
+	  <a href="https://www.nature.com/nclimate/" target="_blank" class="resource-item" style="background-color:#1A535C;">Nature Climae Change</a>
+  
+	  
+	  
     </div>
-  </section>
+	  </div>
+	  
+	  <!-- 学术资源卡片区 -->
+  <div class="resources-card">
+    <h3>学校资源 | SUST link</h3>
+    <div class="resources-grid">
+ 	  <a href="https://zbcg.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕西科技大学招标与采购处</a>
+	  <a href="https://my.sust.edu.cn/" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕西科技大学综合门户</a>
+	  <a href="http://shebei.www.sust.edu.cn/" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大设备预约与试剂采购</a>
+   	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大账务处</a>
+
+
+
+   </div>
+</div>
+
+
+
+
+</section>
 
 
 
