--- a/index.html
+++ b/index.html
@@ -139,10 +139,13 @@ By integrating experimental evolution, physiological and biochemical analyses, m
 
 
   <!-- ====== 页脚 ====== -->
-  <footer>
-    <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
-    <p>Designed by Zhengke</p>
-  </footer>
+<footer>
+  <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke</p>
+  <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
+    网站访问量: <span id="count-number">0</span> 次
+  </div>
+</footer>
 </body>
 </html>
 
