--- a/publications.html
+++ b/publications.html
@@ -309,8 +309,13 @@
     </section>
 
 
-  <footer>
-    <p>© 2025 Diatom Evolution & Adaptation Lab | Zhengke Li</p>
-  </footer>
+<footer>
+  <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
+  <p>Designed by Zhengke</p>
+  <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
+    网站访问量: <span id="count-number">0</span> 次
+  </div>
+</footer>
 </body>
 </html>
+
