--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@ By integrating experimental evolution, physiological and biochemical analyses, m
   <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
   <p>Designed by Zhengke</p>
   <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
-    网站访问量: <span id="count-number">0</span> 次
+    网站访问量（Website traffic）: <span id="count-number">0</span> 次
   </div>
 </footer>
 
