--- a/index.html
+++ b/index.html
@@ -149,6 +149,7 @@ By integrating experimental evolution, physiological and biochemical analyses, m
   <p>Designed by Zhengke</p>
   <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
     网站访问量（Website traffic）: <span id="count-number">0</span> 次
+	  点击：<script>_showDynClicks("wbnews", 961973783, 7752)</script>
   </div>
 </footer>
 
