--- a/index.html
+++ b/index.html
@@ -12,7 +12,6 @@
     <div class="logo">Diatom Ecology & Adaptation & Evolution Lab</div>
     <ul class="nav-links">
       <li><a href="index.html"><span class="nav-zh">首页</span><br><span class="nav-en">Home</span></a></li>
-      <li><a href="research.html"><span class="nav-zh">研究方向</span><br><span class="nav-en">Research</span></a></li>
       <li><a href="members.html"><span class="nav-zh">成员介绍</span><br><span class="nav-en">Lab Members</span></a></li>
       <li><a href="publications.html"><span class="nav-zh">研究成果</span><br><span class="nav-en">Publications</span></a></li>
       <li><a href="projects.html"><span class="nav-zh">项目与合作</span><br><span class="nav-en">Projects</span></a></li>
@@ -56,16 +55,16 @@ By integrating experimental evolution, physiological and biochemical analyses, m
       <h2>实验室隶属与位置 | Affiliation & Location</h2>
      <div class="research-card">
       <p>陕西科技大学生物与医药学院<br> College of Life Sciences, Shannxi University of Science and Technology, Xi’an, China</p>
-	  <p>联系方式：zkli@sust.edu.cn</p>
+	  <p>联系方式（Email）：zkli@sust.edu.cn</p>
     </div>
 
       <h2>致谢 | Acknowledgements</h2>
     <div class="research-card">
-      <p>本实验室的研究工作受到以下机构的资助与支持：</p>
+      <p>本实验室的研究工作受到以下机构的资助与支持（The research work of this laboratory is funded and supported by the following institutions)：</p>
       <ul>
         <li><a href="https://www.nsfc.gov.cn" target="_blank">国家自然科学基金委员会 (NSFC)</a></li>
-        <li><a href="https://kjt.shaanxi.gov.cn" target="_blank">陕西省科学技术厅</a></li>
-        <li><a href="http://www.sust.edu.cn/" target="_blank">陕西科技大学</a></li>
+        <li><a href="https://kjt.shaanxi.gov.cn" target="_blank">陕西省科学技术厅（SPDST）</a></li>
+        <li><a href="http://www.sust.edu.cn/" target="_blank">陕西科技大学（SUST）</a></li>
       </ul>
     </div>
   </div>
@@ -98,21 +97,48 @@ By integrating experimental evolution, physiological and biochemical analyses, m
     </div>
   </div>
 
-  <!-- 学术资源卡片区 -->
+  <!-- 学术搜索片区 -->
   <div class="resources-card">
-    <h3>学术资源 | Academic Resources</h3>
+    <h3>学术搜索 | Academic Search</h3>
     <div class="resources-grid">
-
- <a href="https://so.sciencesoft.cn/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">学术搜索</a>
+  <a href="https://so.sciencesoft.cn/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">学术搜索</a>
   <a href="https://gfsoso.99lb.net/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">谷粉学术</a> 
+  <a href="https://www-cnki-net-443.webvpn.sust.edu.cn/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">中国知网</a> 
+  <a href="https://www.wanfangdata.com.cn/index.html" target="_blank" class="resource-item" style="background-color:#FF6B6B;">万方数据</a> 
+  <a href="https://xueshu.baidu.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">百度学术</a> 
+  <a href="https://scholar.google.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">google学术</a> 
+  <a href="https://webofscience-clarivate-cn-s.webvpn.sust.edu.cn/wos/woscc/smart-search" target="_blank" class="resource-item" style="background-color:#FF6B6B;">WOS</a> 
   <a href="https://chat.deepseek.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">DeepSeek</a>
-  <br><br><br>
+  <a href="https://www.letpub.com.cn/index.php?page=journalapp" target="_blank" class="resource-item" style="background-color:#FF6B6B;">影响因子查询</a>
+  <a href="https://www.scihub.net.cn/sci-hub/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">SCI-hub</a>
 
+ 
+ </div>
+	  </div>
 
- <a href="https://www.nature.com/" target="_blank" class="resource-item" style="background-color:#FF6B6B;">Nature</a>
-      <a href="https://www.cell.com/" target="_blank" class="resource-item" style="background-color:#FFD93D;">Cell</a>
-      <a href="https://www.sciencemag.org/" target="_blank" class="resource-item" style="background-color:#1A535C;">Science</a>
+  <!-- 杂志链接搜索 -->
+  <div class="resources-card">
+    <h3>杂志链接搜索 | Journal Link</h3>
+    <div class="resources-grid">
+ <a href="https://www.nature.com/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature</a>
+      <a href="https://www.cell.com/" target="_blank" class="resource-item" style="background-color:#009ABB;">Cell</a>
+      <a href="https://www.sciencemag.org/" target="_blank" class="resource-item" style="background-color:#009ABB;">Science</a>
 	  <a href="https://www.nature.com/nclimate/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature Climae Change</a> 
+	  <a href="https://www.nature.com/natecolevol/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature Ecology & Evolution</a> 
+	  <a href="https://www.nature.com/nplants/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature Plants</a> 
+	  <a href="https://www.nature.com/nmicrobiol/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature Microbiol.</a> 
+	  <a href="https://www.nature.com/ncomms/" target="_blank" class="resource-item" style="background-color:#009ABB;">Nature Comm.</a> 
+	  <a href="https://nph.onlinelibrary.wiley.com/journal/14698137?journalRedirectCheck=true" target="_blank" class="resource-item" style="background-color:#009ABB;">New Phytol.</a> 
+	  <a href="https://www.nature.com/ismej/?utm_medium=display&utm_source=letpub&utm_content=text_link&utm_term=null&utm_campaign=MLSR_41396_AWA1_CN_CNPL_letpb_mp" target="_blank" class="resource-item" style="background-color:#009ABB;">ISME J</a>   
+	  <a href="https://onlinelibrary.wiley.com/journal/15298817?journalRedirectCheck=true" target="_blank" class="resource-item" style="background-color:#009ABB;">J. Phycology</a>   
+	  <a href="https://link.springer.com/journal/10811?utm_medium=display&utm_source=letpub&utm_content=text_link&utm_term=null&utm_campaign=MLSR_10811_AWA1_CN_CNPL_letpb_mp" target="_blank" class="resource-item" style="background-color:#009ABB;">J. Appl. Phycol.</a>   
+	  <a href="https://onlinelibrary.wiley.com/journal/10.1002/(ISSN)2056-3744" target="_blank" class="resource-item" style="background-color:#009ABB;">Evolution Letters</a>   
+	  <a href="https://onlinelibrary.wiley.com/journal/20457758?journalRedirectCheck=true" target="_blank" class="resource-item" style="background-color:#009ABB;">Ecology and Evolution</a>   
+	  <a href="" target="_blank" class="resource-item" style="background-color:#009ABB;">J. Phycology</a>   
+	  <a href="" target="_blank" class="resource-item" style="background-color:#009ABB;">J. Phycology</a>   
+	  
+	  
+
     </div>
 	  </div>
 	  
@@ -125,12 +151,6 @@ By integrating experimental evolution, physiological and biochemical analyses, m
 	  <a href="http://shebei.www.sust.edu.cn/" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大设备预约与试剂采购</a>
    	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大账务处</a>
    	  <a href="http://chaxin.sust.edu.cn/index.php" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大科技查新</a>
-   	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大</a>
-   	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大</a>
-   	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大</a>
-   	  <a href="http://cwc.www.sust.edu.cn/index.htm" target="_blank" class="resource-item" style="background-color:#4ECDC4;">陕科大</a>
-
-
 
    </div>
 </div>
@@ -148,8 +168,8 @@ By integrating experimental evolution, physiological and biochemical analyses, m
   <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
   <p>Designed by Zhengke</p>
   <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
-    网站访问量（Website traffic）: <span id="count-number">0</span> 次
-	  点击：<script>_showDynClicks("wbnews", 961973783, 7752)</script>
+    网站访问量(Website traffic): <span id="count-number">0</span> 次
+	点击：[<script>_showDynClicks("wbnews", 961973783, 7752)</script>]
   </div>
 </footer>
 
@@ -166,4 +186,3 @@ By integrating experimental evolution, physiological and biochemical analyses, m
 </script>
 </body>
 </html>
-
