--- a/members.html
+++ b/members.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Diatom Evolution & Adaptation Lab (DEAL) - Research</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Diatom Ecology & Adaptation & Evolution Lab</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-<!-- 导航栏 -->
-<nav>
-    <div class="logo">Diatom Evolution & Adaptation Lab</div></div>
 
+<body class="index-page">
+  <!-- ====== 导航栏 ====== -->
+  <nav>
+    <div class="logo">Diatom Ecology & Adaptation & Evolution Lab</div>
     <ul class="nav-links">
       <li><a href="index.html"><span class="nav-zh">首页</span><br><span class="nav-en">Home</span></a></li>
-      <li><a href="research.html"><span class="nav-zh">研究方向</span><br><span class="nav-en">Research</span></a></li>
       <li><a href="members.html"><span class="nav-zh">成员介绍</span><br><span class="nav-en">Lab Members</span></a></li>
       <li><a href="publications.html"><span class="nav-zh">研究成果</span><br><span class="nav-en">Publications</span></a></li>
       <li><a href="projects.html"><span class="nav-zh">项目与合作</span><br><span class="nav-en">Projects</span></a></li>
@@ -20,9 +19,7 @@
       <li><a href="news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
       <li><a href="gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
     </ul>
-	
-
-</nav>
+  </nav>
 
 <!-- Header -->
 
@@ -37,17 +34,18 @@
 <section class="profile-section">
   <h2>课题组长（Principal Investigator）</h2>
   <p>
-李政科，湖南桃江人，副教授，硕士生导师。2016年毕业于华中师范大学获植物学博士学位，2017-2021年在加拿大戴尔豪斯大学和蒙特爱丽森大学从事博士后研究。主要从事硅藻等浮游植物的适应性进化与资源开发利用研究，重点探索多倍化驱动的暖化适应机制、西藏高原藻类暖化和胁迫响应规律及机制、藻类资源可持续利用。目前已发表SCI论文36篇，其中第一作者/通讯作者15篇。论文主要发表在Nature Climate Change，New Phytologist （2篇）, The Plant Cell，Current Biology, Environmental Microbiology，Photosynthesis Research，Limnology and Oceanography，Journal of Phycology，Journal of Applied Phycology等本领域核心国际期刊。主持国家自然科学基金面上和青年项目，省重点研发项目，参与加拿大NSERC、美国西蒙斯基金会等项目。现任陕西省农业工程学会理事，担任多个SCI期刊审稿人，指导学生获多个大赛奖项。
+李政科，湖南桃江人，副教授，硕士生导师。2016年毕业于华中师范大学获植物学博士学位，2017-2021年在加拿大戴尔豪斯大学和蒙特爱丽森大学从事博士后研究。主要从事硅藻等浮游植物的适应性进化与资源开发利用研究，重点探索多倍化驱动的暖化适应机制、西藏高原藻类暖化和胁迫响应规律及机制、藻类资源可持续利用。目前已发表SCI论文36篇，其中第一作者/通讯作者15篇。论文主要发表在Nature Climate Change，New Phytologist （2篇）, The Plant Cell，Current Biology, Environmental Microbiology，Photosynthesis Research，Limnology and Oceanography，Journal of Phycology，Journal of Applied Phycology等本领域核心国际期刊。主持国家自然科学基金面上和青年项目、省重点研发项目，参与加拿大NSERC、美国西蒙斯基金会等项目。现任陕西省农业工程学会理事，担任多个SCI期刊审稿人，指导学生获多个大赛奖项。
   </p>
+  <p>Zhengke Li, an associate professor and master's supervisor from Taojiang, Hunan, earned his Ph.D. in Botany from Central China Normal University in 2016 and conducted postdoctoral research at Canada's Dalhousie University and Mount Allison University from 2017 to 2021. His research focuses on the adaptive evolution and resource utilization of phytoplankton, particularly diatoms, with specific interests in polyploidy-driven thermal adaptation mechanisms, algal responses to warming and environmental stress on the Tibetan Plateau, and sustainable algal resource development. To date, he has published 36 SCI papers, including 15 as first or corresponding author, in leading international journals such as Nature Climate Change, New Phytologist (two papers), The Plant Cell, Current Biology, Environmental Microbiology, Photosynthesis Research, Limnology and Oceanography, Journal of Phycology, and Journal of Applied Phycology. He has presided over projects including the National Natural Science Foundation of China General and Youth Programs and provincial key R&D projects, while also participating in international collaborations funded by Canada's NSERC and the Simons Foundation in the US. Currently serving as a council member of the Shaanxi Society of Agricultural Engineering and a reviewer for multiple SCI journals, he has mentored students to win numerous awards in prestigious competitions.</p>
 <br>  
     <h2>教育背景及工作经历（Educational Background and Work Experience）</h2>
 <p>
-2021.04–至今，陕西科技大学，副教授<br>
-2018.12–2021.04，加拿大戴尔豪斯大学，海洋科学，博士后<br>
-2017.09–2018.11，加拿大蒙特爱丽森大学，环境科学，博士后<br>
-2017.01–2017.08，华中师范大学，助理研究员<br>
-2009.09–2016.12，华中师范大学，植物学博士（硕博连读）<br>
-2005.09–2009.06，湖南科技大学，生物科学学士<br>
+2021.04–至今，陕西科技大学，副教授<br>2021.04–present: Associate Professor, Shaanxi University of Science and Technology<br>
+2018.12–2021.04，加拿大戴尔豪斯大学，海洋科学，博士后<br>2018.12–2021.04: Postdoctoral Researcher, Marine Science, Dalhousie University, Canada<br>
+2017.09–2018.11，加拿大蒙特爱丽森大学，环境科学，博士后<br>2017.09–2018.11: Postdoctoral Researcher, Environmental Science, Mount Allison University, Canada<br>
+2017.01–2017.08，华中师范大学，助理研究员<br>2017.01–2017.08: Research Assistant, Central China Normal University<br>
+2009.09–2016.12，华中师范大学，植物学博士（硕博连读）<br>2009.09–2016.12: Ph.D. in Botany (Combined Master & Doctoral Program), Central China Normal University<br>
+2005.09–2009.06，湖南科技大学，生物科学学士<br>2005.09–2009.06: B.S. in Biological Science, Hunan University of Science and Technology<br>
 </p>
 <br>
 <p>
@@ -107,15 +105,15 @@
 
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2023-2026)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
 
     <a href="students/qinying.html" class="card-link">
       <div class="student-card">
-        <img src="images/liumingli.jpg" alt="李洋洋">
+        <img src="images/qingying.jpg" alt="李洋洋">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">秦莹</span><br>
@@ -123,8 +121,8 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2023-2026)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -132,7 +130,7 @@
 
     <a href="members/liyangyang.html" class="card-link">
       <div class="student-card">
-        <img src="images/liumingli.jpg" alt="李洋洋">
+        <img src="images/yujinlei.jpg" alt="李洋洋">
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
           <span class="name-zh">余静蕾</span><br>
@@ -140,15 +138,15 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2024-2027)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
 
     <a href="members/liyangyang.html" class="card-link">
       <div class="student-card">
-        <img src="images/liyangyang.png" alt="李洋洋">
+        <img src="images/liyangyang.jpg" alt="李洋洋">
 
         <!-- 中文名在上，英文名在下 -->
         <h3 class="student-name">
@@ -158,8 +156,8 @@
 
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2024-2027)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -175,8 +173,8 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2025-2028)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -192,8 +190,8 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2025-2028)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -208,8 +206,8 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
-          <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-zh">硕士研究生(2025-2028)</span><br>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -233,8 +231,64 @@
         </h3>
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
+          <span class="pos-zh">硕士研究生(2022-2025)</span><br>
+          <span class="pos-en">Master's student</span>
+        </p>
+      </div>
+    </a>
+
+     <a href="members/liyangyang.html" class="card-link">
+      <div class="student-card">
+        <img src="images/xinhongguo.jpg" alt="郭新红">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">郭新红</span><br>
+          <span class="name-en">(Xinhong Guo)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">硕士研究生(2022-2025)</span><br>
+          <span class="pos-en">Master's student</span>
+        </p>
+      </div>
+    </a>
+	
+	    <a href="members/liyangyang.html" class="card-link">
+      <div class="student-card">
+        <img src="images/xiaojiaowang1.jpg" alt="王大玺">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">王大玺 </span><br>
+          <span class="name-en">(Daxi Wang)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
+          <span class="pos-zh">硕士研究生(2021-2024)</span><br>
+          <span class="pos-en">Master's student</span>
+        </p>
+      </div>
+    </a>
+  </div> <!-- student-grid 结束 -->
+</section>
+
+
+<!-- ===== 合作学生 ===== -->
+<section class="students-section">
+  <h2>合作成员（Collaborated students）</h2>
+  <div class="student-grid">
+ 
+    <a href="members/liyangyang.html" class="card-link">
+      <div class="student-card">
+        <img src="images/xiaojiaowang.jpg" alt="王晓娇">
+        <!-- 中文名在上，英文名在下 -->
+        <h3 class="student-name">
+          <span class="name-zh">王晓娇</span><br>
+          <span class="name-en">(Xiao Jiaowang)</span>
+        </h3>
+        <!-- 学位中文在上，英文在下 -->
+        <p class="position">
           <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -250,7 +304,7 @@
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
           <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -266,7 +320,7 @@
         <!-- 学位中文在上，英文在下 -->
         <p class="position">
           <span class="pos-zh">硕士研究生</span><br>
-          <span class="pos-en">Master Candidate</span>
+          <span class="pos-en">Master's student</span>
         </p>
       </div>
     </a>
@@ -276,11 +330,7 @@
 
 <!-- 页脚 -->
 <footer>
-  <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
-  <p>Designed by Zhengke</p>
-  <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
-    网站访问量: <span id="count-number">0</span> 次
-  </div>
+    <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li</p>
 </footer>
 
 <script src="js/lang.js"></script>
