--- a/publications.html
+++ b/publications.html
@@ -1,70 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Diatom Evolution & Adaptation Lab (DEAL) - Research</title>
-<link rel="stylesheet" href="css/style.css">
+  <meta charset="UTF-8">
+  <title>Diatom Ecology & Adaptation & Evolution Lab</title>
+  <link rel="stylesheet" href="css/style.css">
 </head>
-<body>
-<!-- 导航栏 -->
-<nav>
-    <div class="logo">Diatom Evolution & Adaptation Lab</div></div>
 
-<ul class="nav-links">
-  <li>
-    <a href="index.html">
-      <span class="nav-zh">首页</span><br>
-      <span class="nav-en">Home</span>
-    </a>
-  </li>
-  <li>
-    <a href="research.html">
-      <span class="nav-zh">研究方向</span><br>
-      <span class="nav-en">Research</span>
-    </a>
-  </li>
-  <li>
-    <a href="members.html">
-      <span class="nav-zh">成员介绍</span><br>
-      <span class="nav-en">Lab Members</span>
-    </a>
-  </li>
-  <li>
-    <a href="publications.html">
-      <span class="nav-zh">研究成果</span><br>
-      <span class="nav-en">Publications</span>
-    </a>
-  </li>
-  <li>
-    <a href="projects.html">
-      <span class="nav-zh">项目与合作</span><br>
-      <span class="nav-en">Projects</span>
-    </a>
-  </li>
-  <li>
-    <a href="teaching.html">
-      <span class="nav-zh">教学与指导</span><br>
-      <span class="nav-en">Teaching</span>
-    </a>
-  </li>
-  <li>
-    <a href="news.html">
-      <span class="nav-zh">新闻与动态</span><br>
-      <span class="nav-en">News</span>
-    </a>
-  </li>
-  <li>
-    <a href="gallery.html">
-      <span class="nav-zh">实验室风采</span><br>
-      <span class="nav-en">Gallery</span>
-    </a>
-  </li>
-</ul>
-    <div class="lang-switch">
-        <button onclick="switchLang('en')">EN</button>
-        <button onclick="switchLang('zh')">中文</button>
-    </div>
-</nav>
+<body class="index-page">
+  <!-- ====== 导航栏 ====== -->
+  <nav>
+    <div class="logo">Diatom Ecology & Adaptation & Evolution Lab</div>
+    <ul class="nav-links">
+      <li><a href="index.html"><span class="nav-zh">首页</span><br><span class="nav-en">Home</span></a></li>
+      <li><a href="members.html"><span class="nav-zh">成员介绍</span><br><span class="nav-en">Lab Members</span></a></li>
+      <li><a href="publications.html"><span class="nav-zh">研究成果</span><br><span class="nav-en">Publications</span></a></li>
+      <li><a href="projects.html"><span class="nav-zh">项目与合作</span><br><span class="nav-en">Projects</span></a></li>
+      <li><a href="teaching.html"><span class="nav-zh">教学与指导</span><br><span class="nav-en">Teaching</span></a></li>
+      <li><a href="news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
+      <li><a href="gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
+    </ul>
+  </nav>
 
 <!-- Header -->
   <main class="content">
@@ -309,13 +264,8 @@
     </section>
 
 
-<footer>
-  <p>© 2025 Diatom Evolution & Adaptation Lab (DEAL) — Zhengke Li at SUST</p>
-  <p>Designed by Zhengke</p>
-  <div id="visitor-count" style="margin-top:5px; font-size:0.9em; color:#fff;">
-    网站访问量: <span id="count-number">0</span> 次
-  </div>
-</footer>
+  <footer>
+    <p>© 2025 Diatom Evolution & Adaptation Lab | Zhengke Li</p>
+  </footer>
 </body>
 </html>
-
