--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -1,137 +1,132 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<title>Diatom Evolution & Adaptation Lab (DEAL) - Research</title>
-<link rel="stylesheet" href="../css/style.css">
+  <meta charset="UTF-8">
+  <title>Diatom Ecology & Adaptation & Evolution Lab</title>
+  <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
-<!-- 导航栏 -->
-<nav>
-    <div class="logo">Diatom Evolution & Adaptation Lab</div></div>
 
-<ul class="nav-links">
-  <li>
-    <a href="index.html">
-      <span class="nav-zh">首页</span><br>
-      <span class="nav-en">Home</span>
-    </a>
-  </li>
-  <li>
-    <a href="research.html">
-      <span class="nav-zh">研究方向</span><br>
-      <span class="nav-en">Research</span>
-    </a>
-  </li>
-  <li>
-    <a href="members.html">
-      <span class="nav-zh">成员介绍</span><br>
-      <span class="nav-en">Lab Members</span>
-    </a>
-  </li>
-  <li>
-    <a href="publications.html">
-      <span class="nav-zh">研究成果</span><br>
-      <span class="nav-en">Publications</span>
-    </a>
-  </li>
-  <li>
-    <a href="projects.html">
-      <span class="nav-zh">项目与合作</span><br>
-      <span class="nav-en">Projects</span>
-    </a>
-  </li>
-  <li>
-    <a href="teaching.html">
-      <span class="nav-zh">教学与指导</span><br>
-      <span class="nav-en">Teaching</span>
-    </a>
-  </li>
-  <li>
-    <a href="news.html">
-      <span class="nav-zh">新闻与动态</span><br>
-      <span class="nav-en">News</span>
-    </a>
-  </li>
-  <li>
-    <a href="gallery.html">
-      <span class="nav-zh">实验室风采</span><br>
-      <span class="nav-en">Gallery</span>
-    </a>
-  </li>
-</ul>
-    <div class="lang-switch">
-        <button onclick="switchLang('en')">EN</button>
-        <button onclick="switchLang('zh')">中文</button>
-    </div>
-</nav>
-
-
+<body class="index-page">
+  <!-- ====== 导航栏 ====== -->
+  <nav>
+    <div class="logo">Diatom Ecology & Adaptation & Evolution Lab</div>
+    <ul class="nav-links">
+      <li><a href="../index.html"><span class="nav-zh">首页</span><br><span class="nav-en">Home</span></a></li>
+      <li><a href="../members.html"><span class="nav-zh">成员介绍</span><br><span class="nav-en">Lab Members</span></a></li>
+      <li><a href="../publications.html"><span class="nav-zh">研究成果</span><br><span class="nav-en">Publications</span></a></li>
+      <li><a href="../projects.html"><span class="nav-zh">项目与合作</span><br><span class="nav-en">Projects</span></a></li>
+      <li><a href="../teaching.html"><span class="nav-zh">教学与指导</span><br><span class="nav-en">Teaching</span></a></li>
+      <li><a href="../news.html"><span class="nav-zh">新闻与动态</span><br><span class="nav-en">News</span></a></li>
+      <li><a href="../gallery.html"><span class="nav-zh">实验室风采</span><br><span class="nav-en">Gallery</span></a></li>
+    </ul>
+  </nav>
 
 <!-- 主体：学生档案 -->
-  <main class="student-page">
+<main class="student-page">
     <section class="student-hero">
       <img class="student-photo" src="../images/liumingli.jpg" alt="刘明丽">
       <div class="student-meta">
-        <h1 class="student-name" data-en="Minli Liu" data-zh="刘明丽">刘明丽(Minli Liu)</h1>
-        <p class="student-position" data-en="Master Candidate" data-zh="硕士研究生">硕士研究生(Master Candidate)</p>
+        <h1 class="student-name">刘明丽 (Minli Liu)</h1>
+        <p class="student-position">硕士研究生 (Master's Student)</p>
+		<p class="student-position">研究方向：1、藻肥资源开发及利用；2、硅藻长期进化与育种；</p>
         <p class="student-contact">
-          <span data-en="Email:" data-zh="邮箱：">Email:</span>
-          <a href="mailto:liuminli@example.edu">liuminli@example.edu</a>
-        </p>
-
-        <!-- 本地 CV 下载按钮 与 外部学术链接 -->
-        <p class="student-links">
-          <a href="../pdf/Li_Yangyang_CV.pdf" class="btn-outline" target="_blank" download data-en="Download CV" data-zh="下载简历">Download CV</a>
-          <a href="https://scholar.google.com/example" class="btn-outline" target="_blank" data-en="Google Scholar" data-zh="谷歌学术">Google Scholar</a>
+          邮箱 (Email): <a href="mailto:liuminli@example.edu">liuminli@example.edu</a>
         </p>
 
         <!-- 返回列表 -->
-        <p><a href="../members.html" class="btn-back" data-en="← Back to Members" data-zh="← 返回成员页">← Back to Members</a></p>
+        <p><a href="../members.html" class="btn-back">← 返回成员页 (Back to Members)</a></p>
       </div>
     </section>
 
     <section class="student-section">
-      <h2 data-en="Education" data-zh="教育背景">教育背景(Education)</h2>
-      <p data-en="Master Candidate in Marine Biology, 2023–2026" data-zh="硕士研究生，生物与医药，2023–2026">硕士研究生，生物与医药，2023–2026（PhD candidate in Marine Biology, 2023–2026）</p>
+      <h2>教育背景 (Education)</h2>
+      <div class="education-timeline">
+        <div class="education-item">
+          <div class="education-period">2023 - 2026 (预计 Expected)</div>
+          <div class="education-degree">硕士研究生 (Master’s student) - 生物与医药 (Biology and Pharmacy)</div>
+          <div class="education-school">陕西科技大学 (Shannxi University of Science and Technology)</div>
+		  <div class="education-school">主修课程：高等生物化学，分子生物学，现代生物技术制药，高级代谢工程，功能组学等；</div>  
+        </div>
+        <div class="education-item">
+          <div class="education-period">2019 - 2023</div>
+          <div class="education-degree">理学学士 (Bachelor of Science) - 生物工程 (Bioengineering)</div>
+          <div class="education-school">吉林化工学院 (Jilin University of Chemical Technology)</div>
+		  <div class="education-school">主修课程：生物化学，微生物学，生物分离工程，生物技术制药，发酵工程，生物反应工程等；</div>
+        </div>
+      </div>
     </section>
 
-    <section class="student-section">
-      <h2 data-en="Research Interests" data-zh="研究方向">Research Interests</h2>
-      <p data-en="How diatoms respond to warming: physiological and transcriptomic analyses."
-         硅藻对暖化的响应：生理与转录组分析。<br>
-         How diatoms respond to warming: physiological and transcriptomic analyses.
-      </p>
+	  <section class="student-section">
+      <h2>实践经历 (Education)</h2>
+      <div class="education-timeline">
+        <div class="education-item">
+          <div class="education-period">山东陀承生物科技有限公司 (2022.5 - 2022.10) 接待员/研发员 </div>
+          <div class="education-school">
+		  1、负责接待病号，客户等，处理办公室文档；<br>
+          2、负责药品研发工作；<br>
+          3、负责研发的药品的批号申请工作；<br>
+      </div></div>
+	  
+        <div class="education-item">
+          <div class="education-period">山东全中懿生物科技有限公司 (2023.02-2023.05) 中医药研发助理 </div>
+          <div class="education-school">
+		  1、负责中药的分类和采购；<br>
+          2、负责中医药活性物质的提取和功能研究；<br>
+      </div></div>
+	  
+	       <div class="education-item">
+          <div class="education-period">武汉百翼生物科技有限公司 (2024.01-2025.01) 实习生 </div>
+          <div class="education-school">
+          1、学习企业文化，在企业进行参观实习；<br>
+          2、学习相关仪器(如质谱、液相、红外等）的工作原理及操作方法；<br>
+          3、学习基因工程的相关技术，学习蛋白电泳，降解速率、降解途径等相关实验技术；<br>
+      </div></div> 	  
+	  </div>
     </section>
+	
+
+	  <section class="student-section">
+      <h2>获奖与成果 (Selected Publications)</h2>
+      <div class="education-timeline">
+        <div class="education-item">中国国际大学生创新大赛（2025）校级二等奖 </div>
+        <div class="education-item">校级二等奖学金（2024） </div>
+        <div class="education-item">英语四级（CET-4,2021） </div>
+        <div class="education-item">连续两年获得校级“优秀学生”称号（2021，2022） </div>
+        <div class="education-item">荣获校级优秀奖学金8次(本科)（2019-2023） </div>
+	 	</div>
+		</section>
+		
+	  <section class="student-section">
+      <h2>主持和参与的课题项目 (Projects)</h2>
+      <div class="education-timeline">
+        <div class="education-item">国家自然科学基金面上项目，2024–2027，参与 </div>
+        <div class="education-item">陕西省科技厅重点研发计划项目，新型蓝藻肥关键技术研发，2022–2023，参与 </div>
+	 	</div>
+		</section>
+
 
     <section class="student-section">
-      <h2 data-en="Selected Publications" data-zh="代表论文">Selected Publications</h2>
-      <ul class="pub-list">
-        <li>
-          <span data-en="Li, Z.K.*, Li, Y., et al. (2025) Polyploidization ... Nature Climate Change." 
-                data-zh="Li, Z.K.*, Li, Y., 等 (2025) Polyploidization ... Nature Climate Change.">
-            Li, Z.K.*, Li, Y., et al. (2025) Polyploidization ... Nature Climate Change.
-          </span>
-          <a href="../pdf/Li_et_al_2025.pdf" class="pdf-link" target="_blank" data-en="PDF" data-zh="PDF">PDF</a>
-        </li>
-        <!-- 可列更多 -->
-      </ul>
-    </section>
-
-    <section class="student-section">
-      <h2 data-en="Other Info" data-zh="其它信息">Other Info</h2>
+      <h2>其它信息 (Other Info)</h2>
       <ul>
-        <li data-en="Advisor: Zhengke Li" data-zh="导师：李志宽">Advisor: Zhengke Li</li>
-        <li data-en="Office: Room 123, Marine Lab" data-zh="办公室：海洋实验室123">Office: Room 123, Marine Lab</li>
+	    <div class="education-item">导师 (Advisor): 李政科 (Zhengke Li)</div>
+	    <div class="education-item">办公室 (Office): 实验室331 (Room 331, Marine Lab)</div>
+        <div class="education-item">实验室技能 (Lab Skills):<br>
+		微生物培养技术；基因组的提取及PCR扩增；微生物遗传育种技术；<br>
+		各类离子及有机物质的提取与分析；流式细胞仪及气相色谱仪等仪器的使用等；<br></div>
       </ul>
     </section>
   </main>
 
- 
-
-
   <footer>
     <p>© 2025 Diatom Evolution & Adaptation Lab | Zhengke Li</p>
   </footer>
+
+  <script>
+    // 语言切换功能 (如果需要保留)
+    function switchLang(lang) {
+      // 这里可以添加语言切换逻辑
+      alert('Language switched to: ' + lang);
+    }
+  </script>
 </body>
 </html>
