--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -30,7 +30,7 @@
         <p class="student-position">硕士研究生 (Master's Student)</p>
 		<p class="student-position">研究方向：1、藻肥资源开发及利用；2、硅藻长期进化与育种；</p>
         <p class="student-contact">
-          邮箱 (Email): <a href="mailto:liuminli@example.edu">liuminli@example.edu</a>
+          邮箱 (Email): <a href="mailto:2890984982@qq.com">2890984982@qq.com</a>
         </p>
 
         <!-- 返回列表 -->
