--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -106,14 +106,14 @@
 
 
     <section class="student-section">
-      <h2>其它信息 (Other Info)</h2>
-      <ul>
-	    <div class="education-item">导师 (Advisor): 李政科 (Zhengke Li)</div>
-	    <div class="education-item">办公室 (Office): 实验室331 (Room 331, Marine Lab)</div>
-        <div class="education-item">实验室技能 (Lab Skills):<br>
-		微生物培养技术；基因组的提取及PCR扩增；微生物遗传育种技术；<br>
-		各类离子及有机物质的提取与分析；流式细胞仪及气相色谱仪等仪器的使用等；<br></div>
-      </ul>
+      <h2>实验室技能 (Lab Skills)</h2>
+	        <div class="education-timeline">
+ 	    <div class="education-item">微生物培养技术</div>
+	    <div class="education-item">基因组的提取及PCR扩增</div>
+        <div class="education-item">微生物遗传育种技术</div>
+        <div class="education-item">微各类离子及有机物质的提取与分析</div>
+        <div class="education-item">流式细胞仪及气相色谱仪等仪器的使用等</div>
+		</div>
     </section>
   </main>
 
