--- a/students/liuminli.html
+++ b/students/liuminli.html
@@ -86,7 +86,7 @@
 	
 
 	  <section class="student-section">
-      <h2>获奖与成果 (Selected Publications)</h2>
+      <h2>获奖、成果与论文 (Awards, Achievements, and Publications)</h2>
       <div class="education-timeline">
         <div class="education-item">中国国际大学生创新大赛（2025）校级二等奖 </div>
         <div class="education-item">校级二等奖学金（2024） </div>
